# grind

./: .env.base  .env.local  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
grind/: asgi.py  settings.py  urls.py  wsgi.py
myapp/tests/: test_views.py
